--- a/ctl/Cargo.toml
+++ b/ctl/Cargo.toml
@@ -10,7 +10,7 @@ name = "pyrectl"
 anyhow = "1.0.90"
 clap = "4.5.20"
 colored = "2.1.0"
-g560-driver = { version = "0.1.0", path = "../devices/g560-driver" }
+pyreworks-g560-driver = { version = "0.1.0", path = "../devices/g560-driver" }
 nusb = "0.1.10"
 pyreworks-common = { version = "0.1.0", path = "../common" }
 tokio = { version = "1.40.0", features = ["full"] }
