--- a/ctl/Cargo.toml
+++ b/ctl/Cargo.toml
@@ -14,3 +14,5 @@ pyreworks-g560-driver = { version = "0.1.0", path = "../devices/g560-driver" }
 nusb = "0.1.10"
 pyreworks-common = { version = "0.1.0", path = "../common" }
 tokio = { version = "1.40.0", features = ["full"] }
+parse_duration = "2.1.1"
+num = "0.4.3"
