--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,9 +20,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Log-in to crates.io
       #if: ${{ github.ref == 'refs/heads/main' }}
-      run: cargo login
-      env:
-        CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
+      run: cargo login ${{secrets.CARGO_REGISTRY_TOKEN}}
     - name: Build ${{matrix.subcrate}}
       run: cd ${{matrix.subcrate}} && cargo build --verbose
     - name: Run tests for ${{matrix.subcrate}}
