--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -3,6 +3,9 @@ name = "pyreworks-common"
 version = "0.1.0"
 edition = "2021"
 
+description = "Common library for use in Pyreworks APIs"
+license = "MIT"
+
 [dependencies]
 css-color = "0.2.8"
 thiserror = "1.0.64"
