--- a/devices/g560-driver/Cargo.toml
+++ b/devices/g560-driver/Cargo.toml
@@ -3,6 +3,9 @@ name = "pyreworks-g560-driver"
 version = "0.1.0"
 edition = "2021"
 
+description = "Userspace driver code for controlling Logitech G560 Speaker LED lights"
+license = "MIT"
+
 [dependencies]
 num = "0.4.3"
 nusb = "0.1.10"
