--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,12 +20,12 @@ jobs:
     - name: Check-out repository code
       uses: actions/checkout@v4
     - name: Log-in to crates.io
-      #if: ${{ github.ref == 'refs/heads/main' }}
+      if: ${{ github.ref == 'refs/heads/main' }}
       run: cargo login ${{secrets.CARGO_REGISTRY_TOKEN}}
     - name: Build ${{matrix.subcrate}}
       run: cd ${{matrix.subcrate}} && cargo build --verbose
     - name: Run tests for ${{matrix.subcrate}}
       run: cd ${{matrix.subcrate}} && cargo test --verbose
     - name: Publish ${{matrix.subcrate}}
-      #if: ${{ github.ref == 'refs/heads/main' }}
+      if: ${{ github.ref == 'refs/heads/main' }}
       run: cd ${{matrix.subcrate}} && cargo publish --verbose
