--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "pyreworks-common"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+
+description = "Common library for use in Pyreworks APIs"
+license = "MIT"
 
 [dependencies]
 css-color = "0.2.8"
