--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-publish:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -29,3 +29,20 @@ jobs:
     - name: Publish ${{matrix.subcrate}}
       if: ${{ github.ref == 'refs/heads/main' }}
       run: cd ${{matrix.subcrate}} && cargo publish --verbose
+  release:
+    runs-on: ubuntu-latest
+    #if: ${{ github.ref == 'refs/heads/main' }}
+    needs: [build-publish]
+    steps:
+    - name: Check-out repository code
+      uses: actions/checkout@v4
+    - name: Build ${{matrix.subcrate}} release binary
+      run: |-
+        cd ctl && cargo build --release --verbose \
+          && cp target/release/pyrectl \
+                target/release/pyrectl-${{lowercase(runner.os)}}-${{lowercase(runner.arch)}}
+    - name: Create GitHub release
+      uses: softprops/action-gh-release@v2
+      with:
+        files: |-
+          ctl/target/release/pyrectl-${{lowercase(runner.os)}}-${{lowercase(runner.arch)}}
