Use ID properly

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,15 +37,16 @@ jobs:
     - name: Check-out repository code
       uses: actions/checkout@v4
     - name: Set facts
+      id: set_facts
       run: echo "::set-output name=full-build-name::pyrectl-${{runner.os}}-${{runner.arch}}" | tr '[:upper:]' '[:lower:]'
     - name: Build ${{matrix.subcrate}} release binary
       run: |-
         cd ctl && cargo build --release --verbose \
           && cp target/release/pyrectl \
-                target/release/${{steps["Set facts"].outputs.full-build-name}}
+                target/release/${{steps.set_facts.outputs.full-build-name}}
     - name: Create GitHub release
       uses: softprops/action-gh-release@v2
       with:
         files: |-
-          ctl/target/release/${{steps["Set facts"].outputs.full-build-name}}
+          ctl/target/release/${{steps.set_facts.outputs.full-build-name}}
 
