Fix up release code

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,15 +38,22 @@ jobs:
       uses: actions/checkout@v4
     - name: Set facts
       id: set_facts
-      run: echo "::set-output name=full-build-name::pyrectl-${{runner.os}}-${{runner.arch}}" | tr '[:upper:]' '[:lower:]'
+      run: |-
+        echo -n "::set-output name=build-full-name::"
+        echo "pyrectl-${{runner.os}}-${{runner.arch}}" | tr '[:upper:]' '[:lower:]'
+
+        echo -n "::set-output name=build-version-ctl::"
+        cargo metadata --format-version=1 | jq -r '.packages | map(select(.name == "pyreworks-ctl")) | .[0].version'
     - name: Build ${{matrix.subcrate}} release binary
       run: |-
         cd ctl && cargo build --release --verbose \
           && cp target/release/pyrectl \
-                target/release/${{steps.set_facts.outputs.full-build-name}}
+                target/release/${{steps.set_facts.outputs.build-full-name}}
     - name: Create GitHub release
       uses: softprops/action-gh-release@v2
       with:
+        name: pyrectl ${{steps.set_facts.outputs.build-version-ctl}}
+        tag_name: ${{steps.set_facts.outputs.build-version-ctl}}
         files: |-
-          ctl/target/release/${{steps.set_facts.outputs.full-build-name}}
+          ctl/target/release/${{steps.set_facts.outputs.build-full-name}}
 
